# ventia-monorepo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  PLAN-cleanup-legacy-shopify.md  PLAN-woocommerce-integration.md  PLAN_DE_ACCION_SPRINT3.md  PLAN_EFACT_HISTORIAS_USUARIO.md  README.md  SPRINT-4-woocommerce.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
apps/backend/: .env.example  README.md  SUPERADMIN_ROADMAP.md  alembic.ini  package.json  pyproject.toml  test_efact.ipynb  test_woocommerce.ipynb
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20251223_2335-b874806f087c_migration_message.py  20251224_1226-4bc433f2dd5c_migration_message.py  20251227_1030-add_delivery_fields_to_orders.py  20251229_1036-6b63927a59c5_add_api_keys_table.py  20251229_1044-d766a87077f2_add_api_keys_table.py  20251229_1535-5bc42defbfa9_add_is_platform_and_encrypt_shopify_.py  20251230_0435-add_superadmin_to_role.py  20260105_1952-add_customer_document_fields_to_orders.py  20260107_1000-add_invoices_table.py  20260107_1010-add_invoice_series_table.py  20260107_1020-add_efact_ruc_to_tenants.py  20260116_1000-add_emisor_fields_to_tenants.py  20260117_0125-merge_heads.py  20260117_0832-c21ddad9b0cb_merge_heads.py  20260117_1200-add_cliente_email_to_invoices.py  20260121_1059-7f4a7df6fce6_add_woocommerce_order_id_to_orders.py  20260121_2310-remove_legacy_shopify_columns.py  20260127_2205-e3c95ab8c78c_add_webhook_events_table.py  20260127_2324-9f9398287434_add_webhook_subscriptions_table.py  20260130_0300-add_chatwoot_fields_to_users.py  (+11 more)
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/scripts/: e2e_dedup_test.py  migrate-chatwoot.ipynb  seed-prod.py  seed.py  simulate_shopify_webhook.py
apps/backend/tests/: conftest.py
(+1008 files in other folders)
